Add higher resolution hawks2.png image

--- a/logarithms/logarithms-simple.qmd
+++ b/logarithms/logarithms-simple.qmd
@@ -165,7 +165,7 @@ Logarithmic spirals can be found in nature in the *nautilus shell*, and in *sunf
 
 ![Sunflower, Courtesy Wikipedia](Sunflower_sky_backdrop.jpg)
 
-![Spiral Flight of Hawk from @Livio2002](hawk.png)
+![Spiral Flight of Hawk from @Livio2002](hawk2.png)
 :::
 :::
 
