--- a/normativeness-of-violence/normativeness-of-violence.qmd
+++ b/normativeness-of-violence/normativeness-of-violence.qmd
@@ -20,9 +20,9 @@ flowchart LR
   
   classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
   
-  abuse[physical abuse]:::red --> aggression[child aggression]:::yellow
+  abuse[physical abuse]:::red --> |"???"| aggression[child aggression]:::yellow
 
-  linkStyle 0 stroke:#000000,stroke-width:3px,color:black;
+  linkStyle 0 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
 ```
 
@@ -44,7 +44,7 @@ flowchart LR
   
   direction LR
 
-  abuse0[physical abuse]:::red --> aggression0[child aggression]:::yellow
+  abuse0[physical abuse]:::red --> |"???"| aggression0[child aggression]:::yellow
   
   end
   
@@ -52,11 +52,11 @@ flowchart LR
   
   direction LR
 
-  abuse1[physical abuse]:::red --> aggression1[child aggression]:::yellow
+  abuse1[physical abuse]:::red --> |"???"| aggression1[child aggression]:::yellow
   
   end
 
-  linkStyle 0,1 stroke:#000000,stroke-width:3px,color:black;
+  linkStyle 0,1 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
   style lowerviolence fill: #F2F2F2
 
