--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "`closeread` Projects"
 author: "Andy Grogan-Kaylor"
+date: "today"
 format: html
 ---
 
@@ -10,7 +11,6 @@ format: html
 * [https://globalfamilies.quarto.pub/be-less-wrong/](https://globalfamilies.quarto.pub/be-less-wrong/)
 * [https://globalfamilies.quarto.pub/spillover-of-violence/](https://globalfamilies.quarto.pub/spillover-of-violence/)
 * [https://globalfamilies.quarto.pub/logarithms/](https://globalfamilies.quarto.pub/logarithms/) | ([simplified version](https://globalfamilies.quarto.pub/logarithms-simple/))
-
-
+* [https://globalfamilies.quarto.pub/normativeness-of-violence/](https://globalfamilies.quarto.pub/normativeness-of-violence/)
 
 
