--- a/normativeness-of-violence/normativeness-of-violence.qmd
+++ b/normativeness-of-violence/normativeness-of-violence.qmd
@@ -27,7 +27,7 @@ share:
   bsky: true
 ---
 
-This study examined whether the associations between caregiver physical abuse and aggressive behaviors among 3- to 4-year-old children in low- and middle-income countries (LMICs). 
+This study [@Ma_normativeness] examined whether the associations between caregiver physical abuse and aggressive behaviors among 3- to 4-year-old children in low- and middle-income countries (LMICs). 
 
 ```{r}
 #| output: false
