--- a/normativeness-of-violence/normativeness-of-violence.bib
+++ b/normativeness-of-violence/normativeness-of-violence.bib
@@ -13,6 +13,6 @@
 @article{Ma_normativeness,
    author = {Julie Ma and Andrew Grogan-Kaylor and Yoonsun Han and Kaitlin P. Ward and Olivia D. Chang and Jorge Cuartas and Garrett T. Pace and Dana C. McCoy and Elizabeth H. Boyle},
    title = {Normativeness of Micro- and Macro-level Violence as Moderators of Associations Between Caregiver Physical Abuse and Child Aggression},
-   year = {in preperation}
+   year = {in preparation}
 }
 
